// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Card hoverable unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--hoverable"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          lorem-ipsum
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card loading unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--loading"
  >
    <div
      class="memori-spin memori-spin--spinning"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          Card title
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with children unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        >
          <p>
            Ciao
          </p>
        </div>
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with cover unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--with-cover"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--cover"
      >
        <img
          alt=""
          src="#"
        />
      </div>
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with custom CSS class unchanged 1`] = `
<div>
  <div
    class="memori-card lorem-ipsum"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with description unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <p
          class="memori-card--description"
        >
          Card description
        </p>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with title unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          Card title
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle memori-loading-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
